Revision history for Updown

{{$NEXT}}

0.0.5  2022-02-17T18:34:11+01:00
    - Added specific dependencies to HTTP::HPACK and
      IO::Socket::Async::SSL so that Updown works with
      Rakudo 2022.02 and Cro 0.8.7.  Once a more recent
      Cro has become available, these dependencies can go.
    - Changed "uptime" field to coerce to Rat, when it is
      100, it comes back as an Int

0.0.4  2022-01-17T20:00:00+01:00
    - Fix thinko in updown script

0.0.3  2022-01-03T12:41:22+01:00
    - Allow for comparators
    - Give each Updown object its *own* default client
    - Add live tests for author

0.0.2  2021-12-30T20:04:07+01:00
    - Add a Updown::Check.title method, for convenience
    - Add a simple CLI

0.0.1  2021-12-29T22:00:24+01:00
    - Initial version