@@ -8,8 +8,8 @@
   "depends": [
     "IO::Socket::Async::SSL:ver<0.7.10>",
     "HTTP::HPACK:ver<0.9.3>",
-    "Cro::HTTP::Client:ver<0.8.7>",
-    "Hash2Class:ver<0.1.5>:auth<zef:lizmat>"
+    "Cro::HTTP::Client:ver<0.8.9.1>",
+    "Hash2Class:ver<0.1.6>:auth<zef:lizmat>"
   ],
   "description": "provide basic API to Updown.io",
   "license": "Artistic-2.0",
@@ -20,7 +20,7 @@
   },
   "resources": [
   ],
-  "source-url": "https://github.com/lizmat/Updown-API.git",
+  "source-url": "https://github.com/lizmat/Updown.git",
   "tags": [
     "API",
     "REST",
