@@ -2,7 +2,7 @@ name = Updown
 
 [ReadmeFromPod]
 ; enable = false
-filename = lib/Updown.rakudoc
+filename = doc/Updown.rakudoc
 
 [UploadToZef]
 
@@ -10,4 +10,6 @@ filename = lib/Updown.rakudoc
 ; match = ^ 'xt/'
 
 [Badges]
-provider = github-actions/test
+provider = github-actions/linux.yml
+provider = github-actions/macos.yml
+provider = github-actions/windows.yml
