@@ -57,8 +57,6 @@ with one of these named arguments **instead** of a C<check_id>:
   :github      github.com
   :google      google.com
   :raku        raku.org
-  :reddit      reddit.com
-  :twitter     twitter.com
 
 =head1 MAIN CLASSES
 
@@ -545,9 +543,13 @@ Elizabeth Mattijsen <liz@raku.rocks>
 Source can be located at: https://github.com/lizmat/Updown . Comments and
 Pull Requests are welcome.
 
+If you like this module, or what I'm doing more generally, committing to a
+L<small sponsorship|https://github.com/sponsors/lizmat/>  would mean a great
+deal to me!
+
 =head1 COPYRIGHT AND LICENSE
 
-Copyright 2021 Elizabeth Mattijsen
+Copyright 2021, 2022, 2024 Elizabeth Mattijsen
 
 This library is free software; you can redistribute it and/or modify it under the Artistic License 2.0.
 
